[package]
name = "skiplist"
version = "0.1.0"
authors = ["Julian Bayardo <julian@bayardo.info>"]
publish = false
description = ""
homepage = "https://github.com/jbayardo/rust-skiplist"
repository = "https://github.com/jbayardo/rust-skiplist.git"
readme = "README.md"
license-file = "LICENSE"

[badges]
travis-ci = { repository = "jbayardo/rust-skiplist", branch = "master" }
codecov = { repository = "jbayardo/rust-skiplist", branch = "master", service = "github" }
is-it-maintained-issue-resolution = { repository = "jbayardo/rust-skiplist" }
is-it-maintained-open-issues = { repository = "jbayardo/rust-skiplist" }

[dependencies]
rand = "0.3"

[dev-dependencies]
quickcheck = "0.3"